add training environment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -105,6 +106,7 @@
                   your home as a long-term investment!
                 </p>
               </div>
+
               <img
                 src="./img/sell-img.jpg"
                 alt="a picture of a house"
@@ -128,6 +130,7 @@
                   for any money or costs.
                 </p>
               </div>
+
               <img
                 src="./img/partner.jpg"
                 alt="women with contract"
@@ -149,6 +152,7 @@
                   value. Never miss out on your home's future worth.
                 </p>
               </div>
+
               <img
                 src="./img/family.jpg"
                 alt="father and two sons"
@@ -161,4 +165,8 @@
     </main>
     <footer></footer>
   </body>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </html>
