add bounse animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <nav class="header-nav">
           <ul class="header-nav-list">
             <li class="header-nav-item">
-              <a class="header-nav-link header-text" href="#">How It Works</a>
+              <a
+                class="header-nav-link header-text animate__animated animate__bounce"
+                href="#"
+                >How It Works</a
+              >
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link header-text" href="#">WHAT TO EXPECT</a>
