add style fot training

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         <nav class="header-nav">
           <ul class="header-nav-list">
             <li class="header-nav-item">
-              <a
-                class="header-nav-link header-text animate__animated animate__bounce"
-                href="#"
+              <a class="header-nav-link header-text current" href="#"
                 >How It Works</a
               >
             </li>
@@ -99,7 +97,15 @@
             </li>
             <li class="benefits-item">
               <div class="wrapper">
-                <h2 class="benefits-title">Bonus Your Home Today</h2>
+                <div class="benefits-title-wrapp">
+                  <div class="benefits-number-wrapp">
+                    <svg class="benefits-item-number" width="17" height="24">
+                      <use href="./img/sprite.svg#one"></use>
+                    </svg>
+                  </div>
+
+                  <h2 class="benefits-title">Bonus Your Home Today</h2>
+                </div>
                 <p class="benefits-subtitle">
                   Sell your equity to Bonus™ and turn your home into a long-term
                   investment.
@@ -123,7 +129,15 @@
             </li>
             <li class="benefits-item">
               <div class="wrapper">
-                <h2 class="benefits-title">Keep Ownership & Move On</h2>
+                <div class="benefits-title-wrapp">
+                  <div class="benefits-number-wrapp">
+                    <svg class="benefits-item-number" width="17" height="24">
+                      <use href="./img/sprite.svg#two"></use>
+                    </svg>
+                  </div>
+
+                  <h2 class="benefits-title">Keep Ownership & Move On</h2>
+                </div>
                 <p class="benefits-subtitle">
                   As your investment partner, Bonus™ takes care of your home so
                   you can move on without worry or costs.
@@ -147,7 +161,14 @@
             </li>
             <li class="benefits-item">
               <div class="wrapper">
-                <h2 class="benefits-title">Sell Again in 5-30 Years</h2>
+                <div class="benefits-title-wrapp">
+                  <div class="benefits-number-wrapp">
+                    <svg class="benefits-item-number" width="17" height="24">
+                      <use href="./img/sprite.svg#thre"></use>
+                    </svg>
+                  </div>
+                  <h2 class="benefits-title">Sell Again in 5-30 Years</h2>
+                </div>
                 <p class="benefits-subtitle">
                   Unlock your bonus wealth. As your home value rises throughout
                   the years, so does your future net-worth.
